# const_init

./: .actrc  .gitignore  Cargo.toml  LICENSE.txt  README.md  build.rs  settings.json
.github/workflows/: tests.yml
benches/: const_init_bench.rs  utils.rs
crates/const_init_build/: Cargo.toml
crates/const_init_build/src/: json.rs  json_parsing.rs  lib.rs
crates/const_init_macros/: Cargo.toml
crates/const_init_macros/src/: lib.rs  macros.rs
docs/: BENCHs.md
examples/: bench_example.rs  with_const_variables.rs  with_derive_macro.rs  with_struct.rs
src/: lib.rs  macros.rs  main.rs
tests/: macro_syntax.rs  test_examples.rs  tests.rs
tests/macro_syntax/: fields_with_no_attribute.rs  fields_with_no_attribute.stderr  fields_with_wrong_attributes_type.rs  fields_with_wrong_attributes_type.stderr  fields_with_wrong_syntax_attribute.rs  fields_with_wrong_syntax_attribute.stderr  value_is_not_constant.rs  value_is_not_constant.stderr
