[package]
name = "const_init"
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace]
members = ["crates/const_init_macros", "crates/const_init_build", "."]
default-members = ["crates/const_init_macros", "crates/const_init_build", "."]

[dependencies]
const_init_macros = {path = "crates/const_init_macros"}

[dev-dependencies]
trybuild = "1.0.111"
criterion = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
const_init_build = {path = "crates/const_init_build"}

[[bench]]
name = "const_init_bench"
harness = false

[profile.dev]
opt-level = 3
debug = true
