[package]
name = "const_init"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Constant initialization of your types with values obtained from a configuration file"
repository = "https://github.com/vuongDang/const_init"
documentation = "https://docs.rs/const_init_macros"
readme = "README.md"
keywords = ["performance", "build-time-init"]
categories = ["config", "development-tools::build-utils"]
exclude = [
    "tests/*",
    "benches/*",
    "Cargo.toml.orig"
]

[workspace]
members = ["crates/const_init_macros", "crates/const_init_build", "."]
default-members = ["crates/const_init_macros", "crates/const_init_build", "."]

[dependencies]
const_init_macros = {path = "crates/const_init_macros"}

[dev-dependencies]
trybuild = "1.0.111"
criterion = "0.7.0"
serde = "1.0"
serde_json = "1.0"

[build-dependencies]
const_init_build = {path = "crates/const_init_build"}

[[bench]]
name = "const_init_bench"
harness = false

[profile.dev]
opt-level = 3
debug = true
