[package]
name = "const_init_build"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Get Rust constant variables from configuration file at build time"
repository = "https://github.com/vuongDang/const_init"
documentation = "https://docs.rs/const_init_build"
readme = "../../README.md"
keywords = ["performance", "build-time-init"]
categories = ["config", "development-tools::build-utils"]
exclude = ["Cargo.toml.orig"]

[dependencies]
json = "0.12"
