[package]
name = "const_init_macros"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Macros to initialize custom types at build-time"
repository = "https://github.com/vuongDang/const_init"
documentation = "https://docs.rs/const_init"
readme = "../../README.md"
keywords = ["performance", "build-time-init"]
categories = ["config", "development-tools::build-utils"]
exclude = ["Cargo.toml.orig"]

[lib]
name = "const_init_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
darling = "0.21.3"
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = "2.0.106"
